--- a/docs/modules/ROOT/pages/objc.adoc
+++ b/docs/modules/ROOT/pages/objc.adoc
@@ -995,3 +995,39 @@ include::{examplesdir}/SampleCodeTest.m[tags=certificate-pinning]
 
 This example loads the certificate from the application sandbox, then
 converts it to the appropriate type to configure the replication object.
+
+== Release Notes
+
+*Bugs*
+
+* https://github.com/couchbase/couchbase-lite-ios/issues/1701[*#1701*]
+2:0 swift expression based query returning empty results
+* https://github.com/couchbase/couchbase-lite-ios/issues/1836[*#1836*]
+2.0: Database Listener callbacks not always getting called on main
+thread
+* https://github.com/couchbase/couchbase-lite-ios/issues/1854[*#1854*]
+2.0 : Dictionary, Array, and Fragment have duplicate definitions
+* https://github.com/couchbase/couchbase-lite-ios/issues/1862[*#1862*]
+2.0: CBLQueryExpression "and:" and "or:" methods cause syntax errors in
+Obj-C++
+* https://github.com/couchbase/couchbase-lite-ios/issues/2005[*#2005*]
+2.0: Make CBLDatabase query/replication tracking thread-safe
+* https://github.com/couchbase/couchbase-lite-ios/issues/2035[*#2035*]
+Cross Join Not Returning expected results
+* https://github.com/couchbase/couchbase-lite-ios/issues/2061[*#2061*]
+Swift 2.0: LiteCore error trying to copy prebuilt DB
+* https://github.com/couchbase/couchbase-lite-ios/issues/2085[*#2085*]
+Crashed in CBLWebSocket
+* https://github.com/couchbase/couchbase-lite-ios/issues/2094[*#2094*]
+TestSelfSignedSSLFailure_SG failed on iOS 10.2
+* https://github.com/couchbase/couchbase-lite-ios/issues/2104[*#2104*]
+Set Immutable Dictionary or Array to Document causes toDictionary() to
+crash in Swift
+
+*Known Issues*
+
+* https://github.com/couchbase/couchbase-lite-ios/issues/2112[*#2112*]
+HTTP proxy support
+* https://github.com/couchbase/couchbase-lite-ios/issues/2122[*#2122*]
+IOS 9 - Got LiteCore error: connection closed abnormally - eventual
+crash
